changed some ui s
