# open-books-backend/src/main/java/edu/book/socialnetwork/domain/user/dto/request/ChangePasswordRequest.java
@@ -1,0 +1,15 @@
+package edu.book.socialnetwork.domain.user.dto.request;
+
+import lombok.*;
+
+@Getter
+@Setter
+@Builder
+@AllArgsConstructor
+@NoArgsConstructor
+public class ChangePasswordRequest {
+
+    private String currentPassword;
+    private String newPassword;
+    private String confirmationPassword;
+}
