# open-books-backend/src/main/java/edu/book/socialnetwork/domain/user/service/AuthenticationService.java
@@ -1,9 +1,11 @@
 package edu.book.socialnetwork.domain.user.service;
 
 import edu.book.socialnetwork.domain.user.dto.request.AuthenticationRequest;
+import edu.book.socialnetwork.domain.user.dto.request.ChangePasswordRequest;
 import edu.book.socialnetwork.domain.user.dto.request.RegistrationRequest;
 import edu.book.socialnetwork.domain.user.dto.response.AuthenticationResponse;
 import jakarta.mail.MessagingException;
+import org.springframework.security.core.Authentication;
 
 public interface AuthenticationService {
     void register(RegistrationRequest request) throws MessagingException;
@@ -11,4 +13,6 @@ public interface AuthenticationService {
     AuthenticationResponse authenticate(AuthenticationRequest request);
 
     void activateAccount(String token) throws MessagingException;
+
+    void changePassword(ChangePasswordRequest request, Authentication connectedUser);
 }
